--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="search-area">
                 <input type="text" name="search" id="search" placeholder="search here">
-                <div class="btn">Search</div>
+                <div class="btn" id="search-btn">Search</div>
             </div>
         </div>
     </nav>
