search instructions bar fixed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </nav>
 
     <section class="show-area">
+        <h2 class="instructions" id="instructions">Search any Food in the Search Bar</h2>
         <div class="card-grid">
         
         </div>
